# eegsynth

./: .gitattributes  .gitignore  CHANGES.md  README.md  TimeFrequencyBreath.py  TimeFrequencyRR.py  biofeedback_function.py  compile_midi.m  cvgate.m  cvgateOpen.m  cvgate_test.m  digitalpiano.m  eegsynth-gui.py  eegsynth.py  git_workflow_eegsynth.ccd  launchcontrolXL.m  libportmidi_windows32.lib  libportmidi_windows64.lib  license.txt  microbrute.m  micromodulDJ2.m  midiIn.c  midiIn.m  midiIn.mexa64  midiIn.mexmaci64  midiIn.mexw64  midiOpen.m  midiOut.c  midiOut.mexw64  midimonitor.m  porttime.h  pyproject.toml  realtime_interface_eegsynth_EMG_ECG.m  setup.py  test.txt  version.py
datafiles/: testBipolar20170827-0.edf
doc/: README.md  _architecture.md  _introduction.md  architecture.md  avmixer.md  buffer.md  calibration.md  compress.md  contribute.md  design.md  doepfer.md  faq.md  funding.md  history.md  inifile.md  input.md  installation-linux.md  installation-macos.md  installation-osx.md  installation-windows.md  installation.md  introduction.md  launchcontrol.md  manual-control.md  manual_control.md  matrixmixer.md  midi.md  midiosc.md  module-overview.md  openbci.md  output.md  patching.md  preface.md  recording.md  redis.md  release.md  rhythms.md  scripts.md  tocommit  tutorial1.md  (+3 more)
hardware/: README.md
inifiles/: playbacksignal.ini  plotsignal.ini
interface/: README.md  index.js  package.json
lib/: ArtNet.py  EDF.py  EEGsynth.py  EEGsynth.sh  FakeRedis.py  FieldTrip.py  FieldTrip_test_client.py  FieldTrip_test_server.py  Redis_test_client.py  RingBuffer.py  ZmqRedis.py  colormap.py  shini.LICENSE  shini.README  shini.sh
matlab/: README.md  audio_test.m  compile_midi.m  compress.m  cvgateOpen.m  cvgate_test.m  digitalpiano.m  eegcontroller.m  launchcontrolXL.m  midiIn.c  midiIn.mexmaci64  midiIn.mexw32  midiOut.c  midiOut.m  midiOut.mexa64  midiOut.mexw32  midiOut.mexw64  portmidi.h  test_compress.m  test_shuttle_control.m
misc/: ExplorationBitalinoRESP.ipynb  ExploreBitalinoRESP.py  RealTimeCoherenceEstimate.py  ZerocrossFeedback.py  benchmark_ecg.py  filters.py  (+6 more)
(+1401 files in other folders)
